--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wild Books List</title>
+		<title>Wild Articles List</title>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet" />
 		<link rel="icon" href="data:;base64,=" />
@@ -17,14 +17,16 @@
 	</head>
 	<body>
 		<div class="nav-container"></div>
-		<h1>A List of Wild Books</h1>
+		<h1>Wild Articles List</h1>
 			<div class="container">
-				
-				<input
-					class="sortByPrice"
-					placeholder="Sort by max price - Enter price..."
-				/>
-				<div class="books-container">
+				<div class="search-box-container">
+					<span id="search-title">Search</span>
+					<input
+						class="articles-search"
+						placeholder="Search for a Wild Article..."
+					/>
+				</div>
+				<div class="articles-container">
 					<div class="lds-roller">
 						<div></div>
 						<div></div>
