--- a/favorites.html
+++ b/favorites.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wild Books Favorites List</title>
+		<title>Wild Articles Favorites List</title>
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -25,9 +25,9 @@
 	</head>
 	<body>
 		<div class="nav-container"></div>
-		<h1>Your Favorite Books</h1>
+		<h1>Your Favorite Articles</h1>
 		<div class="container">
-			<div class="books-container">
+			<div class="articles-container">
 				<div class="lds-roller">
 					<div></div>
 					<div></div>
