--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wild Articles Favorites List</title>
+		<title>Wild Articles Login</title>
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,15 +21,25 @@
 			src="https://kit.fontawesome.com/62db01abf1.js"
 			crossorigin="anonymous"
 		></script>
-		<script src="js/favorites.js" type="module" defer></script>
+		<script src="js/login.js" type="module" defer></script>
 	</head>
 	<body>
 		<div class="nav-container"></div>
-		<h1>Your Favorite Articles</h1>
+		<h1>Log in to do your thing</h1>
 		<div class="container">
-			<div class="articles-container">
+			<div class="form-container">
+                <form>
+                    <div>
+                        <label for="username"> Username/email</label>
+                        <input id="username" />
+                    </div>
+                    <div>
+                        <label for="password"> Password</label>
+                        <input id="password" type="password" />
+                    </div>
+                    <button id="loginButton">Login</button>
+                </form>
 			</div>
-			<button id="clear-button" type="button">Clear all favorites</button>
 		</div>
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
