--- a/addNewArticle.html
+++ b/addNewArticle.html
@@ -27,17 +27,20 @@
 		<div class="nav-container"></div>
 		<h1>Call your crazy and add a new Wild Article</h1>
 		<div class="container">
-			<div class="form-container">
+			<div class="article-form-container">
+				<div class="feedback-container"></div>
                 <form class="add-article-form">
-                    <div class="feedback-container"></div>
-
                     <div>
-                        <label for="name">Article Name</label>
-                        <input id="name" />
+                        <label for="title">Article Title</label>
+                        <input id="title" />
                     </div>
                     <div>
                         <label for="author">Author</label>
                         <input id="author" />
+                    </div>
+					<div>
+                        <label for="published_at">Published (mm/dd/yyyy)</label>
+                        <input id="published_at" />
                     </div>
                     <div>
                         <label for="summary">Article Summary</label>
