--- a/articleDetails.html
+++ b/articleDetails.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Wild Articles Login</title>
+		<title></title>
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,27 +21,25 @@
 			src="https://kit.fontawesome.com/62db01abf1.js"
 			crossorigin="anonymous"
 		></script>
-		<script src="js/login.js" type="module" defer></script>
+		<script src="js/articleDetails.js" type="module" defer></script>
 	</head>
 	<body>
 		<div class="nav-container"></div>
-		<h1>Login to do your thing</h1>
 		<div class="container">
-			<div class="form-container">
-				<div class="feedback-container"></div>
-				<form class="login-form">
-					<div>
-						<label for="username"> Username/email</label>
-						<input id="username" />
-					</div>
-					<div>
-						<label for="password"> Password</label>
-						<input id="password" type="password" />
-					</div>
-					<button id="login-button">Login</button>
-				</form>
+			<div class="articles-container">
+				<div class="lds-roller">
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+					<div></div>
+				</div>
 			</div>
 		</div>
+
 		<script
 			src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
 			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
